--- a/Quiz/100_Numpy_exercises.ipynb
+++ b/Quiz/100_Numpy_exercises.ipynb
@@ -37,14 +37,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3d46fba2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "3c1222ff",
@@ -55,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 41,
    "id": "f52e6a0b",
    "metadata": {},
    "outputs": [],
@@ -74,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 42,
    "id": "b7fa5fa1",
    "metadata": {},
    "outputs": [
@@ -129,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 43,
    "id": "083c5c46",
    "metadata": {},
    "outputs": [
@@ -139,7 +131,7 @@
        "array([nan, nan, nan, nan, nan, nan, nan, nan, nan, nan])"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 44,
    "id": "02b04021",
    "metadata": {},
    "outputs": [
@@ -169,7 +161,7 @@
        "3"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 45,
    "id": "40e6b70d",
    "metadata": {},
    "outputs": [
@@ -199,7 +191,7 @@
        "\"python3 -c 'command'\""
       ]
      },
-     "execution_count": 80,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 46,
    "id": "bcceacf7",
    "metadata": {},
    "outputs": [
@@ -229,7 +221,7 @@
        "array([0., 0., 0., 0., 1., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 47,
    "id": "3d117d54",
    "metadata": {},
    "outputs": [],
@@ -270,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 48,
    "id": "22d23470",
    "metadata": {},
    "outputs": [
@@ -282,7 +274,7 @@
        "       15, 14, 13, 12, 11, 10])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 49,
    "id": "7449e82d",
    "metadata": {},
    "outputs": [
@@ -314,7 +306,7 @@
        "       [6, 7, 8]])"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 50,
    "id": "1a84bed8",
    "metadata": {},
    "outputs": [
@@ -345,7 +337,7 @@
        "array([1, 2, 4])"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 51,
    "id": "29dc1fd3",
    "metadata": {},
    "outputs": [
@@ -378,7 +370,7 @@
        "       [0., 0., 1.]])"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,27 +390,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 52,
    "id": "eadfae67",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[0.61847761, 0.1290962 , 0.36064392],\n",
-       "        [0.89381412, 0.58077385, 0.49848454],\n",
-       "        [0.03983479, 0.39302735, 0.01687812]],\n",
+       "array([[[0.48574191, 0.85505263, 0.60841513],\n",
+       "        [0.71071349, 0.47102506, 0.89599866],\n",
+       "        [0.2054059 , 0.46011305, 0.99522633]],\n",
        "\n",
-       "       [[0.6715609 , 0.54103166, 0.63430049],\n",
-       "        [0.62829031, 0.75002695, 0.05109514],\n",
-       "        [0.38851271, 0.99920027, 0.16977378]],\n",
+       "       [[0.53314645, 0.36151791, 0.81731351],\n",
+       "        [0.85197583, 0.34088   , 0.56874254],\n",
+       "        [0.83740612, 0.27532909, 0.02321078]],\n",
        "\n",
-       "       [[0.48533862, 0.48468755, 0.06732234],\n",
-       "        [0.07491171, 0.50892964, 0.03211495],\n",
-       "        [0.61231292, 0.21372049, 0.47275885]]])"
+       "       [[0.00197279, 0.80007494, 0.36010093],\n",
+       "        [0.71782351, 0.86028357, 0.75029741],\n",
+       "        [0.46266432, 0.75523925, 0.76201101]]])"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 53,
    "id": "9a74dbfc",
    "metadata": {},
    "outputs": [
@@ -448,28 +440,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.83926539 0.28442616 0.04139011 0.36531728 0.564235   0.59428936\n",
-      "  0.84175765 0.53074551 0.25871297 0.55569379]\n",
-      " [0.04325674 0.98974084 0.02994993 0.29770887 0.29800529 0.26188684\n",
-      "  0.40125901 0.99563904 0.71619689 0.00569958]\n",
-      " [0.16256532 0.43711726 0.78750812 0.6013352  0.95303757 0.8632685\n",
-      "  0.81882637 0.32861779 0.9067469  0.65799376]\n",
-      " [0.50198588 0.96017493 0.87254199 0.89169769 0.35954135 0.20342991\n",
-      "  0.38743227 0.25977135 0.29178403 0.17913958]\n",
-      " [0.76412828 0.13193465 0.32522766 0.73669782 0.48944209 0.59090759\n",
-      "  0.49049774 0.16218863 0.24593592 0.31437565]\n",
-      " [0.32649713 0.77948267 0.63639892 0.57009825 0.17461717 0.93630106\n",
-      "  0.48780425 0.27943378 0.44958797 0.58580119]\n",
-      " [0.86630154 0.81236038 0.56466041 0.34481421 0.39934952 0.92462952\n",
-      "  0.84103663 0.3874019  0.08082772 0.3591226 ]\n",
-      " [0.47190294 0.77687165 0.24704204 0.49427372 0.04286789 0.28714479\n",
-      "  0.0681486  0.33331635 0.44955253 0.25924601]\n",
-      " [0.39996195 0.16742446 0.22238158 0.89865569 0.32586204 0.59721377\n",
-      "  0.34811559 0.72084874 0.68490699 0.06646816]\n",
-      " [0.21433366 0.89780346 0.96835013 0.17665979 0.90410261 0.68247996\n",
-      "  0.94973716 0.38672844 0.95442577 0.16881711]]\n",
-      "min 0.005699579138752631\n",
-      "max 0.9956390354479064\n"
+      "[[0.71746027 0.21941372 0.10892045 0.22427197 0.22755487 0.82298677\n",
+      "  0.57488382 0.33824053 0.62010298 0.70549703]\n",
+      " [0.30635767 0.55493799 0.45989958 0.2482435  0.88576911 0.0387608\n",
+      "  0.44786722 0.21998674 0.08506761 0.76102147]\n",
+      " [0.54649741 0.74998969 0.99246444 0.89272856 0.13852031 0.63460712\n",
+      "  0.38237697 0.27163481 0.65078191 0.66773122]\n",
+      " [0.92046318 0.39059761 0.80358987 0.35539665 0.71588133 0.1066769\n",
+      "  0.48052327 0.17170795 0.45123369 0.50670608]\n",
+      " [0.48190037 0.24326299 0.31012487 0.19423797 0.18003161 0.05277514\n",
+      "  0.1201415  0.52396097 0.25275851 0.27855105]\n",
+      " [0.76884426 0.70767244 0.05643176 0.62279076 0.06262235 0.18127307\n",
+      "  0.08753137 0.88042729 0.41518302 0.78979384]\n",
+      " [0.90834317 0.60117742 0.32335035 0.91653256 0.16772593 0.02301737\n",
+      "  0.11656263 0.74742059 0.49441918 0.54044324]\n",
+      " [0.82883143 0.08111892 0.26323117 0.87311647 0.45505855 0.91990557\n",
+      "  0.02798639 0.77128634 0.16767827 0.54046887]\n",
+      " [0.13590252 0.05790921 0.60023026 0.80081752 0.3433933  0.75225285\n",
+      "  0.96690234 0.13483146 0.99896874 0.78407015]\n",
+      " [0.93846487 0.28263853 0.55959881 0.58141333 0.98721649 0.71547672\n",
+      "  0.0869274  0.72923757 0.38544172 0.85996663]]\n",
+      "min 0.02301737316543495\n",
+      "max 0.9989687398077535\n"
      ]
     }
    ],
@@ -491,17 +483,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 54,
    "id": "6691530b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.46641878563986516"
+       "0.4974402531261454"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 55,
    "id": "ad8308e3",
    "metadata": {},
    "outputs": [
@@ -535,7 +527,7 @@
        "       [1, 1, 1, 1, 1]])"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 56,
    "id": "9d5c78c4",
    "metadata": {},
    "outputs": [
@@ -571,7 +563,7 @@
        "       [1, 1, 1, 1, 1]])"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 57,
    "id": "3b4985f2",
    "metadata": {},
    "outputs": [],
@@ -628,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 58,
    "id": "faed6e2b",
    "metadata": {},
    "outputs": [
@@ -642,7 +634,7 @@
        "       [0, 0, 0, 4, 0]])"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 59,
    "id": "ed150400",
    "metadata": {},
    "outputs": [
@@ -680,7 +672,7 @@
        "       [0., 1., 0., 1., 0., 1., 0., 1.]])"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 60,
    "id": "3782b5a9",
    "metadata": {},
    "outputs": [
@@ -713,7 +705,7 @@
        "(1, 5, 4)"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 61,
    "id": "4c07477c",
    "metadata": {},
    "outputs": [
@@ -750,7 +742,7 @@
        "       [0, 1, 0, 1, 0, 1, 0, 1]])"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,21 +763,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 62,
    "id": "cea6c993",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.58888889, 0.51111111, 0.51111111, 0.68888889, 0.56666667],\n",
-       "       [0.56666667, 0.        , 0.25555556, 0.37777778, 0.62222222],\n",
-       "       [0.17777778, 0.17777778, 0.7       , 0.62222222, 0.16666667],\n",
-       "       [0.38888889, 0.74444444, 0.9       , 0.11111111, 0.91111111],\n",
-       "       [0.05555556, 0.68888889, 0.06666667, 1.        , 0.43333333]])"
+       "array([[0.49473684, 0.09473684, 0.96842105, 0.97894737, 0.08421053],\n",
+       "       [0.33684211, 0.85263158, 0.16842105, 0.94736842, 0.31578947],\n",
+       "       [0.31578947, 0.38947368, 0.6       , 0.69473684, 0.70526316],\n",
+       "       [0.68421053, 0.89473684, 0.37894737, 0.98947368, 0.29473684],\n",
+       "       [0.87368421, 1.        , 0.42105263, 0.        , 0.82105263]])"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,17 +802,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 63,
    "id": "d165044b",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/cl/w3vvp74d6b95c0w799qxrb2w0000gn/T/ipykernel_5180/1539737010.py:1: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  color = np.dtype([(\"r\", np.ubyte, 1),(\"g\", np.ubyte, 1)])\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "dtype([('r', 'u1', (1, 2)), ('g', 'u1', (4,))])"
+       "dtype([('r', 'u1'), ('g', 'u1')])"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,11 +841,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "6a42619f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.77827037, 0.45157287],\n",
+       "       [0.98255904, 0.41589874],\n",
+       "       [0.9466817 , 0.46103674],\n",
+       "       [0.738864  , 0.27730219],\n",
+       "       [0.9521526 , 0.45903245]])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.random.random((5,3))\n",
+    "b = np.random.random((3,2))\n",
+    "a@b"
+   ]
   },
   {
    "attachments": {},
@@ -858,11 +877,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "e4b39c03",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([4, 5, 6, 7, 8, 9]),)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([x for x in range(-1,30)])\n",
+    "np.where((8>=a) & (a>=3)) #꼭 괄호로 묶어야함.\n"
+   ]
   },
   {
    "attachments": {},
@@ -882,11 +915,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "4c95bc3f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum(range(5),-1))\n",
+    "#from numpy import *\n",
+    "print(sum(range(5),-1))"
+   ]
   },
   {
    "attachments": {},
@@ -907,11 +953,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "564658fc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 2., 4., 5.])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Z = np.array([1,2,4,5])"
+   ]
   },
   {
    "attachments": {},
