--- a/Quiz/100_Numpy_exercises.ipynb
+++ b/Quiz/100_Numpy_exercises.ipynb
@@ -1407,11 +1407,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "7db3846d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True])"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([x for x in range(10)])\n",
+    "b= np.array([x for x in range(10)])\n",
+    "k = (a == b)\n",
+    "k"
+   ]
   },
   {
    "attachments": {},
