--- a/Quiz/김연우 - Regression_과제.ipynb
+++ b/Quiz/김연우 - Regression_과제.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 36,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -25,16 +25,13 @@
           "output_type": "stream",
           "text": [
             "Defaulting to user installation because normal site-packages is not writeable\n",
-            "Collecting gapminder\n",
-            "  Downloading gapminder-0.1-py3-none-any.whl (32 kB)\n",
+            "Requirement already satisfied: gapminder in /Users/yeonwookim/Library/Python/3.9/lib/python/site-packages (0.1)\n",
             "Requirement already satisfied: pandas in /Users/yeonwookim/Library/Python/3.9/lib/python/site-packages (from gapminder) (2.0.3)\n",
             "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/yeonwookim/Library/Python/3.9/lib/python/site-packages (from pandas->gapminder) (2.8.2)\n",
             "Requirement already satisfied: pytz>=2020.1 in /Users/yeonwookim/Library/Python/3.9/lib/python/site-packages (from pandas->gapminder) (2023.3)\n",
             "Requirement already satisfied: tzdata>=2022.1 in /Users/yeonwookim/Library/Python/3.9/lib/python/site-packages (from pandas->gapminder) (2023.3)\n",
             "Requirement already satisfied: numpy>=1.20.3 in /Users/yeonwookim/Library/Python/3.9/lib/python/site-packages (from pandas->gapminder) (1.25.0)\n",
-            "Requirement already satisfied: six>=1.5 in /Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/site-packages (from python-dateutil>=2.8.2->pandas->gapminder) (1.15.0)\n",
-            "Installing collected packages: gapminder\n",
-            "Successfully installed gapminder-0.1\n"
+            "Requirement already satisfied: six>=1.5 in /Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/site-packages (from python-dateutil>=2.8.2->pandas->gapminder) (1.15.0)\n"
           ]
         }
       ],
@@ -46,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 37,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -207,7 +204,7 @@
               "[1704 rows x 6 columns]"
             ]
           },
-          "execution_count": 24,
+          "execution_count": 37,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -250,7 +247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 38,
       "metadata": {
         "id": "iGjPt2Xq9IaP"
       },
@@ -261,7 +258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 39,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -410,7 +407,7 @@
               "[1704 rows x 5 columns]"
             ]
           },
-          "execution_count": 26,
+          "execution_count": 39,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -430,7 +427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 40,
       "metadata": {
         "id": "4qWEMsnZ9dli"
       },
@@ -443,7 +440,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 41,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -653,7 +650,7 @@
               "[1704 rows x 9 columns]"
             ]
           },
-          "execution_count": 30,
+          "execution_count": 41,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -673,7 +670,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 42,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -730,7 +727,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 43,
       "metadata": {
         "id": "8oPT4a9j-uSi"
       },
@@ -753,7 +750,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 44,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -805,7 +802,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 45,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -814,6 +811,17 @@
         "outputId": "d6200a26-e180-436b-94d1-27a47974238b"
       },
       "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000556 seconds.\n",
+            "You can set `force_col_wise=true` to remove the overhead.\n",
+            "[LightGBM] [Info] Total Bins 531\n",
+            "[LightGBM] [Info] Number of data points in the train set: 1363, number of used features: 7\n",
+            "[LightGBM] [Info] Start training from score 8.155438\n"
+          ]
+        },
         {
           "name": "stderr",
           "output_type": "stream",
@@ -826,12 +834,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000449 seconds.\n",
-            "You can set `force_col_wise=true` to remove the overhead.\n",
-            "[LightGBM] [Info] Total Bins 531\n",
-            "[LightGBM] [Info] Number of data points in the train set: 1363, number of used features: 7\n",
-            "[LightGBM] [Info] Start training from score 8.155438\n",
-            "GradientBoostingRegressor MSE: 0.340635134055899\n",
+            "GradientBoostingRegressor MSE: 0.3408304266555685\n",
             "XGBRegressor MSE: 0.3724219409279403\n",
             "LGBMRegressor MSE: 0.33232827916593727\n"
           ]
@@ -888,7 +891,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {
         "id": "rHGd2BU9C3mJ"
       },
