--- a/Quiz/김연우 - Regression_과제.ipynb
+++ b/Quiz/김연우 - Regression_과제.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 194,
+      "execution_count": 216,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 195,
+      "execution_count": 217,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -204,7 +204,7 @@
               "[1704 rows x 6 columns]"
             ]
           },
-          "execution_count": 195,
+          "execution_count": 217,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -247,7 +247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 196,
+      "execution_count": 218,
       "metadata": {
         "id": "iGjPt2Xq9IaP"
       },
@@ -258,7 +258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 197,
+      "execution_count": 219,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -407,7 +407,7 @@
               "[1704 rows x 5 columns]"
             ]
           },
-          "execution_count": 197,
+          "execution_count": 219,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -427,7 +427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 198,
+      "execution_count": 220,
       "metadata": {
         "id": "4qWEMsnZ9dli"
       },
@@ -440,7 +440,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 199,
+      "execution_count": 221,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -650,7 +650,7 @@
               "[1704 rows x 9 columns]"
             ]
           },
-          "execution_count": 199,
+          "execution_count": 221,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -670,7 +670,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 200,
+      "execution_count": 222,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -727,7 +727,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 201,
+      "execution_count": 223,
       "metadata": {
         "id": "8oPT4a9j-uSi"
       },
@@ -750,7 +750,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 202,
+      "execution_count": 224,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -802,7 +802,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 203,
+      "execution_count": 225,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -825,12 +825,12 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000643 seconds.\n",
+            "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000508 seconds.\n",
             "You can set `force_col_wise=true` to remove the overhead.\n",
             "[LightGBM] [Info] Total Bins 531\n",
             "[LightGBM] [Info] Number of data points in the train set: 1363, number of used features: 7\n",
             "[LightGBM] [Info] Start training from score 8.155438\n",
-            "GradientBoostingRegressor MSE: 0.34086111890589005\n",
+            "GradientBoostingRegressor MSE: 0.34078975913190745\n",
             "XGBRegressor MSE: 0.3724219409279403\n",
             "LGBMRegressor MSE: 0.33232827916593727\n"
           ]
@@ -878,7 +878,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 204,
+      "execution_count": 226,
       "metadata": {},
       "outputs": [
         {
@@ -1064,7 +1064,7 @@
               "max             1.000000    20.999899      11.639762  "
             ]
           },
-          "execution_count": 204,
+          "execution_count": 226,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1076,7 +1076,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 205,
+      "execution_count": 227,
       "metadata": {},
       "outputs": [
         {
@@ -5370,7 +5370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 206,
+      "execution_count": 228,
       "metadata": {},
       "outputs": [
         {
@@ -9664,7 +9664,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 207,
+      "execution_count": 229,
       "metadata": {},
       "outputs": [
         {
@@ -9683,7 +9683,7 @@
               "Name: gdpPercap, dtype: float64"
             ]
           },
-          "execution_count": 207,
+          "execution_count": 229,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -9694,7 +9694,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 208,
+      "execution_count": 230,
       "metadata": {},
       "outputs": [
         {
@@ -9934,7 +9934,7 @@
               "[1675 rows x 11 columns]"
             ]
           },
-          "execution_count": 208,
+          "execution_count": 230,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -9948,7 +9948,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 209,
+      "execution_count": 231,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -9958,7 +9958,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 210,
+      "execution_count": 232,
       "metadata": {},
       "outputs": [
         {
@@ -9999,7 +9999,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 211,
+      "execution_count": 233,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -10013,14 +10013,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 212,
+      "execution_count": 234,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000417 seconds.\n",
+            "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000691 seconds.\n",
             "You can set `force_col_wise=true` to remove the overhead.\n",
             "[LightGBM] [Info] Total Bins 531\n",
             "[LightGBM] [Info] Number of data points in the train set: 1340, number of used features: 7\n",
@@ -10048,7 +10048,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 213,
+      "execution_count": 235,
       "metadata": {},
       "outputs": [
         {
@@ -10081,7 +10081,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 214,
+      "execution_count": 236,
       "metadata": {},
       "outputs": [
         {
@@ -10260,7 +10260,7 @@
               "[1675 rows x 7 columns]"
             ]
           },
-          "execution_count": 214,
+          "execution_count": 236,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -10271,7 +10271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 215,
+      "execution_count": 237,
       "metadata": {
         "id": "rHGd2BU9C3mJ"
       },
@@ -10286,7 +10286,7 @@
             "Model:                            OLS   Adj. R-squared:                  0.701\n",
             "Method:                 Least Squares   F-statistic:                     449.9\n",
             "Date:                Mon, 17 Jul 2023   Prob (F-statistic):               0.00\n",
-            "Time:                        00:06:07   Log-Likelihood:                -1371.5\n",
+            "Time:                        00:11:01   Log-Likelihood:                -1371.5\n",
             "No. Observations:                1340   AIC:                             2759.\n",
             "Df Residuals:                    1332   BIC:                             2801.\n",
             "Df Model:                           7                                         \n",
@@ -10344,7 +10344,21 @@
         "id": "Mr38E48MGNTh"
       },
       "source": [
-        "해석:"
+        "해석: \n",
+        "<br>\n",
+        "<br>\n",
+        "R-squared의 값이 0.703으로 성공적으로 학습을 진행했다고 할 수 있다.\n",
+        "<br><br>\n",
+        "continent_Africa의 값이 가장 낮은것을 보니 Africa의 gdp가 다른 대륙의 gdp가 평균적으로 낮은것을 알 수 있다.\n",
+        "<br>\n",
+        "같은 방식으로 Europe의 gdp는 다른 대륙에 비해 높은것으로 예상된다.\n",
+        "<br>\n",
+        "하지만 Europe의  p > t값이 높은것으로 보아 예외가 많고, 예측이 힘든것으로 보임.\n",
+        "<br><br>\n",
+        "\n",
+        "Mean Centering을 진행한 데이터셋이기 때문에 Const값은 나머지 모든 변수가 평균값을 가질 때 종속변수의 값으로 설정이 된다. 따라서 8.1769가 모든 변수가 평균일때 gdpPercap_log 값이다.\n",
+        "<br><br>\n",
+        "year, pop_log는 gdp와 움의 상관관계를 가지며, lifeExp는 양의 상관관계를 가진다.\n"
       ]
     }
   ],
