--- a/practice/김연우 - 데이터_크롤링_실습_1.ipynb
+++ b/practice/김연우 - 데이터_크롤링_실습_1.ipynb
@@ -2138,22 +2138,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {
         "id": "N8q9ILeSEO-Q"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "<Response [200]>"
-            ]
-          },
-          "execution_count": 7,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "from bs4 import BeautifulSoup\n",
         "import requests\n",
@@ -2163,8 +2152,7 @@
         "res = requests.get(\"https://www.gmarket.co.kr/n/best\")\n",
         "\n",
         "#2. BeautifulSoup을 이용해 파싱하기\n",
-        "soup = BeautifulSoup(res.content, 'html.parser')\n",
-        "res"
+        "soup = BeautifulSoup(res.content, 'html.parser')"
       ]
     },
     {
